/*
Copyright 2019-present Open Networking Foundation.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

// Package onos.topo.device defines interfaces for managing devices.
package onos.topo.device;

import "gogoproto/gogo.proto";
import "github.com/onosproject/onos-topo/pkg/types/device/device.proto";

// AddRequest adds a device to the topology
message AddRequest {
    // device is the device to add
    onos.topo.device.Device device = 1;
}

// AddResponse is sent in response to an AddDeviceRequest
message AddResponse {
    // device is the device with a revision number
    onos.topo.device.Device device = 1;
}

// UpdateRequest updates a device
message UpdateRequest {
    // device is the updated device
    onos.topo.device.Device device = 1;
}

// UpdateResponse is sent in response to an UpdateDeviceRequest
message UpdateResponse {
    // device is the device with updated revision
    onos.topo.device.Device device = 1;
}

// GetRequest gets a device by ID
message GetRequest {
    // id is the unique device ID with which to lookup the device
    string id = 1 [(gogoproto.customname) = "ID", (gogoproto.casttype) = "github.com/onosproject/onos-topo/pkg/types/device.ID"];
}

// GetResponse carries a device
message GetResponse {
    // device is the device object
    onos.topo.device.Device device = 1;
}

// ListRequest requests a stream of devices and changes
// By default, the request requests a stream of all devices that are present in the topology when
// the request is received by the service. However, if `subscribe` is `true`, the stream will remain
// open after all devices have been sent and events that occur following the last device will be
// streamed to the client until the stream is closed.
message ListRequest {

    // subscribe indicates whether to subscribe to events (e.g. ADD, UPDATE, and REMOVE) that occur
    // after all devices have been streamed to the client
    bool subscribe = 1;
}

// ListResponse carries a single device event
message ListResponse {

    // type is the type of the event
    Type type = 1;

    // device is the device on which the event occurred
    onos.topo.device.Device device = 2;

    // Device event type
    enum Type {
        // NONE indicates this response does not represent a state change
        NONE = 0;

        // ADDED is an event which occurs when a device is added to the topology
        ADDED = 1;

        // UPDATED is an event which occurs when a device is updated
        UPDATED = 2;

        // REMOVED is an event which occurs when a device is removed from the topology
        REMOVED = 3;
    }
}

// RemoveRequest removes a device by ID
message RemoveRequest {
    // device is the device to remove
    onos.topo.device.Device device = 1;
}

// RemoveResponse is sent in response to a RemoveDeviceRequest
message RemoveResponse {

}

// DeviceService provides an API for managing devices.
service DeviceService {

    // Add adds a device to the topology
    rpc Add (AddRequest) returns (AddResponse) {
    }

    // Update updates a device
    rpc Update (UpdateRequest) returns (UpdateResponse) {
    }

    // Get gets a device by ID
    rpc Get (GetRequest) returns (GetResponse) {
    }

    // List gets a stream of device add/update/remove events
    rpc List (ListRequest) returns (stream ListResponse) {
    }

    // Remove removes a device from the topology
    rpc Remove (RemoveRequest) returns (RemoveResponse) {
    }

}
